--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,1 +1,2 @@
-MONGODB_URI=
+MONGODB_URI="mongodb+srv://vjeb:vjeb@cluster0.dgzl2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+JWT_SECRET="s3cR3t!@#1b2c3d4e5f6g7h8i9j0klmnopqrstuvwxYZ"
