--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,2 +1,5 @@
 MONGODB_URI="mongodb+srv://vjeb:vjeb@cluster0.dgzl2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET="s3cR3t!@#1b2c3d4e5f6g7h8i9j0klmnopqrstuvwxYZ"
+AWS_BUCKET_NAME=lovemypet-cesar
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=AKIA3GM6ICGAAHXRHEXQ
