--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ESNext",
     "strict": true,
     "outDir": "dist",
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+  },
+  "include": ["**/*.ts", "**/*.d.ts"]
 }
